<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.screen.OnboardingScreen1Fragment">

    <TextView
        android:id="@+id/description"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="240dp"
        android:gravity="center"
        android:text="@string/first_slide_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.835" />

    <TextView
        android:id="@+id/next_btn"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="360dp"
        android:gravity="center"
        android:text="@string/next_btn"
        android:textColor="@color/Green"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/skip_btn"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:text="@string/skip_btn"
        android:textColor="@color/Green"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:foregroundGravity="center"
        android:src="@drawable/ic_onboarding_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>