<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.AddNewAddressActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <ImageView
            android:id="@+id/iv_back_address_management"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/selector_back_activity"/>
        <TextView
            android:id="@+id/tv_title_add_address"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:text="@string/add_address"
            app:fontFamily="@font/open_sans_bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"/>
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/fullName"
        app:boxStrokeColor="@color/Green1"
        app:hintTextColor="@color/Green1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_full_name"
            android:layout_width="match_parent"
            android:lines="1"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/Province"
        app:boxStrokeColor="@color/Green1"
        app:hintTextColor="@color/Green1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:id="@+id/edt_address_province"
            android:lines="1"
            android:fontFamily="@font/open_sans"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/District"
        app:boxStrokeColor="@color/Green1"
        app:hintTextColor="@color/Green1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20sp"
            android:id="@+id/edt_district_address"
            android:lines="1"
            android:fontFamily="@font/open_sans"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ward_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/ward"
        app:boxStrokeColor="@color/Green1"
        app:hintTextColor="@color/Green1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20sp"
            android:id="@+id/edt_address_ward"
            android:lines="1"
            android:fontFamily="@font/open_sans"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/phoneNumber"
        app:boxStrokeColor="@color/Green1"
        app:hintTextColor="@color/Green1"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phoneNumber_address"
            android:layout_width="match_parent"
            android:lines="1"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:drawablePadding="10sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/detailAddress"
        app:boxStrokeColor="@color/Green1"
        app:hintTextColor="@color/Green1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_detail_address"
            android:layout_width="match_parent"
            android:lines="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="15dp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:backgroundTint="@color/Green1"
        android:id="@+id/btn_save_address"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/save_new_address"
        android:layout_width="match_parent"
        android:textColor="@color/white">
    </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>