<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/ly1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/cl_parent">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60sp"
                android:src="@drawable/ic_icon_app"
                app:layout_constraintTop_toBottomOf="parent"
                />
            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:gravity="center_horizontal"
                android:text="@string/Let_get_started"
                android:fontFamily="@font/open_sans"
                android:layout_below="@+id/imageView2"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv2"
                android:layout_margin="5sp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/open_sans"
                android:text="@string/Create_an_new_account"
                android:textAlignment="center"
                android:textSize="12sp"
                android:layout_below="@+id/tv1"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ly2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ly1"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:fontFamily="@font/open_sans"
                android:hint="@string/Full_Name"
                app:boxStrokeColor="@color/Green1"
                app:hintTextColor="@color/Green1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_full_name"
                android:layout_width="match_parent"
                android:lines="1"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/selector_sign_person_icon"
                android:drawablePadding="10sp"
                 />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_full_name"
                android:layout_marginTop="5sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                app:boxStrokeColor="@color/Green1"
                app:hintTextColor="@color/Green1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/selector_sign_email_icon"
                    android:drawablePadding="10sp"
                    android:lines="1"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/Your_Email"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_below="@+id/til_email"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/selector_sign_visibility"
                app:boxStrokeColor="@color/Green1"
                app:hintTextColor="@color/Green1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/selector_sign_lock_icon"
                    android:drawablePadding="10sp"
                    android:lines="1"
                    android:fontFamily="@font/open_sans"
                    android:inputType="textPassword"
                    android:hint="@string/Password" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_below="@+id/til_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/selector_sign_visibility"
                app:boxStrokeColor="@color/Green1"
                app:hintTextColor="@color/Green1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/selector_sign_lock_icon"
                    android:drawablePadding="10sp"
                    android:lines="1"
                    android:fontFamily="@font/open_sans"
                    android:inputType="textPassword"
                    android:hint="@string/Password_Again" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:background="@drawable/border_button_sign_in_sign_up"
                android:text="@string/Sign_Up"
                android:textColor="@color/white"
                android:fontFamily="@font/open_sans"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_below="@id/til_password_again"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ly3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ly2"
            >
            <LinearLayout
                android:id="@+id/id_lly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/tv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:text="@string/Have_an_account"
                    android:fontFamily="@font/open_sans"
                    android:textColor="@color/Gray3"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_weight="0"
                    tools:ignore="InefficientWeight" />
                <TextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sign_In"
                    android:textColor="@color/Green1"
                    android:fontFamily="@font/open_sans"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>