<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ClickItemServices">
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/tv_back_service_detail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/selector_back_activity"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"/>
        <TextView
            android:id="@+id/tv_service_detail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/Detail_services"
            android:textSize="20sp"
            app:fontFamily="@font/open_sans_bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/tv_add_cart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_navigation_outline_shopping_cart_24"/>
    </RelativeLayout>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/id_card_services"
                android:layout_width="match_parent"
                android:layout_below="@+id/rl1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- Media -->
                    <ImageView
                        android:id="@+id/id_im_SD"
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        app:srcCompat="@drawable/bonsai"
                        android:scaleType="centerCrop"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="right"
                        android:weightSum="2"
                        android:padding="16dp">
                        <!-- Title, secondary and supporting text -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:id="@+id/id_tv_price_SD"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/price_service"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                />
                            <TextView
                                android:id="@+id/id_tv_service_name_SD"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="19dp"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/name_service"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            >
                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/id_ratingBar"
                            android:rating="3.5"
                            android:layout_margin="16dp"
                            android:stepSize="0.1"
                            style="@style/Base.Widget.AppCompat.RatingBar.Small"
                            />
                        <TextView
                            android:id="@+id/id_tc_stock_in_SD"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/Stock_in"
                            android:textColor="?android:attr/textColorSecondary"
                            />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    app:strokeColor="@color/Green1"
                    android:text="@string/buy_now"
                    android:textColor="@color/Green1"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_margin="20dp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Green1"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/white"
                    android:layout_margin="20dp"
                    />
            </LinearLayout>
</RelativeLayout>